[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/cell.gd" type="Script" id=1]
[ext_resource path="res://assets/cell.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 20, 20 )

[node name="cell" type="Area2D"]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
status = 0

[node name="img" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_cell_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_cell_area_exited"]
[connection signal="input_event" from="." to="." method="_on_cell_input_event"]
